Greg and Yu: initial object setup

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -5,11 +5,14 @@
 
     <link rel="stylesheet" type="text/css" href="vendor/jasmine-1.2.0/jasmine.css">
 
+    <script src="vendor/jquery/jquery-1.7.2.min.js"></script>
+    <script src="vendor/sinon-1.3.4.js"></script>
+
     <script src="vendor/jasmine-1.2.0/jasmine.js"></script>
     <script src="vendor/jasmine-1.2.0/jasmine-html.js"></script>
     <script src="vendor/jquery/jquery-1.7.2.min.js"></script>
     <script src="vendor/jasmine-1.2.0/jasmine-jquery.js"></script>
-
+    <script src="vendor/jasmine-1.2.0/jasmine-sinon.js"></script>
 
     <!-- Include helper files -->
     <script src="spec/helpers/globalNamespace.js"></script>
