Greg and Yu: figureing out the position based on the angle

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -19,8 +19,10 @@
 
     <!-- include source files here... -->
     <script src="../src/js/Knob.js"></script>
+
     <!-- include spec files here... -->
     <script src="spec/set-up.spec.js"></script>
+    <script src="spec/calculate-positions.spec.js"></script>
     <!--Do me last-->
     <script src="spec/globalNamespaceChecker.js"></script>
 
