--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -23,6 +23,7 @@
     <!-- include spec files here... -->
     <script src="spec/set-up.spec.js"></script>
     <script src="spec/calculate-positions.spec.js"></script>
+    <script src="spec/interaction.spec.js"></script>
     <!--Do me last-->
     <script src="spec/globalNamespaceChecker.js"></script>
 
