--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" href="css/main.css">
         <style>
             #Knob {
-                width: 200px;
-                height: 200px;
+                width: 288px;
+                height: 288px;
                 position: relative;
                 background-image: url('img/knob.png');
                 background-size: contain;
@@ -27,9 +27,19 @@
             #Slider {
                 display: none;
                 position: absolute;
-                height: 25px;
-                width: 25px;
+                height: 49px;
+                width: 49px;
                 background-image: url('img/inner-circle.png');
+                background-size: contain;
+                background-repeat: no-repeat;
+            }
+
+            #OuterSlider {
+                display: none;
+                position: absolute;
+                height: 49px;
+                width: 49px;
+                background-image: url('img/outer-circle.png');
                 background-size: contain;
                 background-repeat: no-repeat;
             }
@@ -53,6 +63,14 @@
 
                 -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='img/inner-circle.png', sizingMethod='scale')";
             }
+            #OuterSlider {
+                background-image: none;
+                filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+                    src='img/outer-circle.png',
+                    sizingMethod='scale');
+
+                -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='img/outer-circle.png', sizingMethod='scale')";
+            }
         </style>
         <![endif]-->
 
@@ -60,14 +78,17 @@
     </head>
     <body>
 
-        <div id="Knob"><div id="Slider" data-start-angle="300" data-height="25" data-width="25"></div></div>
+        <div id="Knob" data-height="288" data-width="288">
+            <div id="Slider" data-start-angle="300" data-height="49" data-width="49" data-ratio="0.3333"></div>
+            <div id="OuterSlider" data-start-angle="300" data-height="49" data-width="49" data-ratio="0.95"></div>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
         <script src="js/Knob.js"></script>
         <script>
             $(document).ready(function () {
-                var knob = new Knob();
+                var knob = new Knob({outerSelector: '#OuterSlider'});
             })
         </script>
 
