--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -24,6 +24,8 @@
     <script src="spec/set-up.spec.js"></script>
     <script src="spec/calculate-positions.spec.js"></script>
     <script src="spec/interaction.spec.js"></script>
+    <script src="spec/callbacks.spec.js"></script>
+
     <!--Do me last-->
     <script src="spec/globalNamespaceChecker.js"></script>
 
