Greg: a whole bunhc of refactoring courtesy of Chris

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -17,13 +17,14 @@
     <script src="spec/helpers/globalNamespace.js"></script>
 
     <!-- include source files here... -->
-    <script src="../src/js/Knob.js"></script>
+    <script src="../src/js/knob.js"></script>
+    <script src="../src/js/triangle.js"></script>
+    <script src="../src/js/point.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/set-up.spec.js"></script>
-    <script src="spec/calculate-positions.spec.js"></script>
-    <script src="spec/interaction.spec.js"></script>
-    <script src="spec/callbacks.spec.js"></script>
+    <script src="spec/knob.spec.js"></script>
+    <script src="spec/point.spec.js"></script>
+    <script src="spec/triangle.spec.js"></script>
 
     <!--Do me last-->
     <script src="spec/globalNamespaceChecker.js"></script>
