--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,9 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
-        <script src="js/Knob.js"></script>
+        <script src="js/knob.js"></script>
+        <script src="js/point.js"></script>
+        <script src="js/triangle.js"></script>
         <script>
             $(document).ready(function () {
                 var knob = new Knob({outerSelector: '#OuterSlider',
