Greg: renamed the project

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -17,12 +17,12 @@
     <script src="spec/helpers/globalNamespace.js"></script>
 
     <!-- include source files here... -->
-    <script src="../src/js/knob.js"></script>
+    <script src="../src/js/orbital-dial.js"></script>
     <script src="../src/js/triangle.js"></script>
     <script src="../src/js/point.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/knob.spec.js"></script>
+    <script src="spec/orbital-dial.spec.js"></script>
     <script src="spec/point.spec.js"></script>
     <script src="spec/triangle.spec.js"></script>
 
