--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <style>
-            #Knob {
+            #OrbitalDial {
                 width: 288px;
                 height: 288px;
                 position: relative;
@@ -81,17 +81,17 @@
     </head>
     <body>
 
-        <div id="Knob" data-height="288" data-width="288">
+        <div id="OrbitalDial" data-height="288" data-width="288">
             <div id="Slider" data-start-angle="300" data-height="49" data-width="49" data-ratio="0.3333"></div>
             <div id="OuterSlider" data-start-angle="300" data-height="49" data-width="49" data-ratio="0.95"></div>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
-        <script src="../dist/knob.min.js"></script>
+        <script src="../dist/orbital-dial.min.js"></script>
         <script>
             $(document).ready(function () {
-                var knob = new Knob({outerSelector: '#OuterSlider',
+                var orbitalDial = new OrbitalDial({outerSelector: '#OuterSlider',
                                         onMoveCallBack: function() { console.log('moving!'); },
                                         onMoveEndCallBack: function() { console.log('Done moving the dial');}
                                     });
