--- a/index.html
+++ b/index.html
@@ -15,7 +15,66 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <style>
+        #OrbitalDial {
+            width: 288px;
+            height: 288px;
+            position: relative;
+            background-image: url('https://raw.github.com/gregstewart/orbital-dial/master/src/img/knob.png');
+            background-size: contain;
+            background-repeat: no-repeat;
+            margin: 0 auto;
+        }
 
+        #Slider {
+            display: none;
+            position: absolute;
+            height: 49px;
+            width: 49px;
+            background-image: url('https://raw.github.com/gregstewart/orbital-dial/master/src/img/inner-circle.png');
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        #OuterSlider {
+            display: none;
+            position: absolute;
+            height: 49px;
+            width: 49px;
+            background-image: url('https://raw.github.com/gregstewart/orbital-dial/master/src/img/outer-circle.png');
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+    </style>
+
+    <!--[if lt IE 9]>
+    <style>
+      #OrbitalDial {
+          background-image: none;
+          filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+              src='https://raw.github.com/gregstewart/orbital-dial/master/src/img/knob.png',
+              sizingMethod='scale');
+
+          -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=https://raw.github.com/gregstewart/orbital-dial/master/src/img/knob.png, sizingMethod='scale')";
+      }
+      #Slider {
+          background-image: none;
+          filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+              src='https://raw.github.com/gregstewart/orbital-dial/master/src/img/inner-circle.png',
+              sizingMethod='scale');
+
+          -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='https://raw.github.com/gregstewart/orbital-dial/master/src/img/inner-circle.png', sizingMethod='scale')";
+      }
+      #OuterSlider {
+          background-image: none;
+          filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
+              src='https://raw.github.com/gregstewart/orbital-dial/master/src/img/outer-circle.png',
+              sizingMethod='scale');
+
+          -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='https://raw.github.com/gregstewart/orbital-dial/master/src/img/outer-circle.png', sizingMethod='scale')";
+      }
+    </style>
+    <![endif]-->
   </head>
   <body>
       <div id="header">
@@ -38,36 +97,53 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Welcome to Oribital-dial.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <p>Orbital dial is a jQuery based dial/knob, and tested on following browsers Chrome 23, Opera 12.11, Safari 6.0.2, Firefox 17, IE6+</p>
+        <h3>Example</h3>
+        <div id="OrbitalDial" data-height="288" data-width="288">
+          <div id="Slider" data-start-angle="300" data-height="49" data-width="49" data-ratio="0.3333"></div>
+          <div id="OuterSlider" data-start-angle="300" data-height="49" data-width="49" data-ratio="0.95"></div>
+        </div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        <h3>Usage</h3>
+<ol>
+    <li>include the orbital-dial.min.js in your page</li>
+    <li>create a set of containers for the dial background image and then one or more orbiting sliders:
+        <pre><code>
+&lt;div id="OrbitalDial" data-height="288" data-width="288"&gt;
+    &lt;div id="Slider" data-start-angle="300" data-height="49" data-width="49" data-ratio="0.3333"&gt;&lt;/div&gt;
+    &lt;div id="OuterSlider" data-start-angle="300" data-height="49" data-width="49" data-ratio="0.95"&gt;&lt;/div&gt;
+&lt;/div&gt;
+        </code></pre>
+    </li>
+    <li>Each slider represents an element that will orbite around the dial as you interact with it.</li>
+    <li>Invoke the dial:
+        <pre><code>
+$(document).ready(function () {
+    var orbitalDial = new OrbitalDial({outerSelector: '#OuterSlider'
+                        , onMoveCallBack: function() { console.log('moving!'); }
+                        , onMoveEndCallBack: function() { console.log('Done moving the dial');}
+                      });
+});
+        </code></pre>
+    </li>
+    <li>customise the images for the dial by updating the CSS</li>
+    <li>you can configure the the dial, by either attaching attributes to the nodes, or by passing in options when you invoke the dial</li>
+</ol>
       </section>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
   </body>
+  <script src="https://raw.github.com/gregstewart/orbital-dial/master/dist/orbital-dial.min.js"></script>
+  <script>
+      $(document).ready(function () {
+          var orbitalDial = new OrbitalDial({outerSelector: '#OuterSlider'
+              , onMoveCallBack: function() { console.log('moving!'); }
+              , onMoveEndCallBack: function() { console.log('Done moving the dial');}
+          });
+      });
+  </script>
 </html>
